# ens-shell-gtk

./: .gitignore  .gitmodules  README.md  meson.build
data/: com.github.ensemblesaw.gui-shell.gresource.xml  ens-shell-gtk.gresource.xml  ens-shell-gtk.gschema.xml.in  meson.build
data/Themes/: Application.css
data/Themes/Display/: Display.css
meson/: post_install.py
po/: com.github.subhadeepjasu.ensembles.pot
po/extra/: POTFILES  extra.pot
src/: Config.vala.in  MainWindow.vala  Services.vala  Shell.vala  meson.build
src/Classes/: MainWindow.vala  Services.vala  Settings.vala  Shell.vala  ShellBuilder.vala  Theme.vala  UIMap.vala
src/Classes/Dialogs/: MIDIAssignDialog.vala  PowerDialog.vala
src/Classes/Layouts/: AppMenu.vala  AssignablesBoard.vala  BeatVisualization.vala  DesktopLayout.vala  InfoDisplay.vala  JoyStick.vala  KeyboardPanel.vala  KioskLayout.vala  MobileLayout.vala  PluginView.vala  SamplerPadsPanel.vala  StyleControlPanel.vala  SynthControlPanel.vala
src/Classes/Layouts/Display/: AudioPluginPicker.vala  DSPScreen.vala  DisplayWindow.vala  HomeScreen.vala  ModulatorScreen.vala  PluginScreen.vala  StyleScreen.vala  TempoScreen.vala  VoiceScreen.vala
src/Classes/Plugins/AudioPlugins/Widgets/: AudioPluginControl.vala
src/Classes/Utils/: AccentColors.vala
src/Classes/Widgets/: ContextMenu.vala  DeviceItem.vala  Drumkit.vala  Key.vala  Keyboard.vala  Knob.vala  Octave.vala  StyledButton.vala
src/Classes/Widgets/Display/: DSPInstanceMenuItem.vala  DSPMenuItem.vala  EqualizerBar.vala  GraphicalModulator.vala  ModulatorScale.vala  StyleMenuItem.vala  VoiceMenuItem.vala
src/Interfaces/: ContextMenuTrigger.vala  ControlSurface.vala  MIDIControllable.vala
src/Layouts/: AssignablesBoard.vala  BeatVisualization.vala  DesktopLayout.vala  InfoDisplay.vala  KeyboardPanel.vala  KioskLayout.vala  Layout.vala  MixerBoard.vala  MobileLayout.vala  PluginView.vala  RegistryPanel.vala  SamplerPadsPanel.vala  StyleControlPanel.vala  SynthControlPanel.vala  VoiceNavPanel.vala
src/Layouts/Display/: AudioPluginPicker.vala  VoiceScreen.vala
src/Plugins/AudioPlugins/Widgets/: AudioPluginControl.vala
src/Widgets/: Key.vala  Keyboard.vala  Knob.vala  Octave.vala
src/Widgets/Display/: DSPInstanceMenuItem.vala  DSPMenuItem.vala  DisplayWindow.vala  VoiceMenuItem.vala  WheelScrollableWidget.vala
subprojects/: ens-aw-core.wrap  ens-shell-cli.wrap  ens-tui-shell.wrap  libvinject.wrap
