# Install fonts
install_data (
    join_paths ('Fonts', 'Exo2', 'Exo2-VariableFont_wght.ttf'),
    install_dir: join_paths (get_option ('datadir'), 'fonts', 'truetype', 'Exo2')
)

install_data (
    join_paths ('Fonts', 'Exo2', 'Exo2-Italic-VariableFont_wght.ttf'),
    install_dir: join_paths (get_option ('datadir'), 'fonts', 'truetype', 'Exo2')
)

install_data (
    join_paths ('Fonts', 'Michroma', 'Michroma-Regular.ttf'),
    install_dir: join_paths (get_option ('datadir'), 'fonts', 'truetype', 'Michroma')
)
