sources = files (
    # Shell
    'Shell.vala',
    'Services.vala',
    'Settings.vala',


    'MainWindow.vala',

    'Layouts/Layout.vala',
    'Layouts/DesktopLayout.vala',
    'Layouts/MobileLayout.vala',
    'Layouts/KioskLayout.vala',
    'Layouts/InfoDisplay.vala',
    'Layouts/KeyboardPanel.vala',
    'Layouts/BeatVisualization.vala',
    'Layouts/MixerBoard.vala',
    'Layouts/AssignablesBoard.vala',
    'Layouts/RegistryPanel.vala',
    'Layouts/SamplerPadsPanel.vala',
    'Layouts/StyleControlPanel.vala',
    'Layouts/SynthControlPanel.vala',
    'Layouts/VoiceNavPanel.vala',
    'Layouts/PluginView.vala',

    'Layouts/Display/HomeScreen.vala',
    'Layouts/Display/StyleScreen.vala',
    'Layouts/Display/VoiceScreen.vala',
    'Layouts/Display/DSPScreen.vala',
    'Layouts/Display/AudioPluginPicker.vala',
    'Layouts/Display/PluginScreen.vala',

    'Widgets/Knob.vala',
    'Widgets/Key.vala',
    'Widgets/Octave.vala',
    'Widgets/Keyboard.vala',

    'Widgets/Display/WheelScrollableWidget.vala',
    'Widgets/Display/DisplayWindow.vala',
    'Widgets/Display/VoiceMenuItem.vala',
    'Widgets/Display/StyleMenuItem.vala',
    'Widgets/Display/DSPMenuItem.vala',
    'Widgets/Display/DSPInstanceMenuItem.vala',

    'Plugins/AudioPlugins/Widgets/AudioPluginControl.vala',

    'Utils/AccentColors.vala',
    'Utils/DisplayTheme.vala',

    'Dialogs/PowerDialog.vala',
)
