classes = files (
    # Shell
    'Classes/Shell.vala',
    'Classes/Services.vala',
    'Classes/Settings.vala',


    'Classes/MainWindow.vala',

    'Classes/Layouts/DesktopLayout.vala',
    'Classes/Layouts/MobileLayout.vala',
    'Classes/Layouts/KioskLayout.vala',
    'Classes/Layouts/InfoDisplay.vala',
    'Classes/Layouts/KeyboardPanel.vala',
    'Classes/Layouts/BeatVisualization.vala',
    'Classes/Layouts/MixerBoard.vala',
    'Classes/Layouts/AssignablesBoard.vala',
    'Classes/Layouts/RegistryPanel.vala',
    'Classes/Layouts/SamplerPadsPanel.vala',
    'Classes/Layouts/StyleControlPanel.vala',
    'Classes/Layouts/SynthControlPanel.vala',
    'Classes/Layouts/VoiceNavPanel.vala',
    'Classes/Layouts/PluginView.vala',

    'Classes/Layouts/Display/HomeScreen.vala',
    'Classes/Layouts/Display/StyleScreen.vala',
    'Classes/Layouts/Display/VoiceScreen.vala',
    'Classes/Layouts/Display/DSPScreen.vala',
    'Classes/Layouts/Display/AudioPluginPicker.vala',
    'Classes/Layouts/Display/PluginScreen.vala',

    'Classes/Widgets/Knob.vala',
    'Classes/Widgets/Key.vala',
    'Classes/Widgets/Octave.vala',
    'Classes/Widgets/Keyboard.vala',

    'Classes/Widgets/Display/WheelScrollableWidget.vala',
    'Classes/Widgets/Display/DisplayWindow.vala',
    'Classes/Widgets/Display/VoiceMenuItem.vala',
    'Classes/Widgets/Display/StyleMenuItem.vala',
    'Classes/Widgets/Display/DSPMenuItem.vala',
    'Classes/Widgets/Display/DSPInstanceMenuItem.vala',

    'Classes/Plugins/AudioPlugins/Widgets/AudioPluginControl.vala',

    'Classes/Utils/AccentColors.vala',
    'Classes/Utils/DisplayTheme.vala',

    'Classes/Dialogs/PowerDialog.vala',
)

interfaces = files (
    'Interfaces/ControlSurface.vala'
)

sources = [interfaces, classes]
